# groupsinfo

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
configs/: config_vars.yaml  secure_data.json  static_config.yaml
postgresql/schemas/: db_1.sql
src/: main.cpp
src/components/groups/: component.cpp  component.hpp
src/exceptions/resource_not_found/: exception.cpp  exception.hpp
src/handlers/groups/: handler.cpp  handler.hpp
src/models/: group.hpp
src/sql/: group_query.hpp
tests/: conftest.py  requirements.txt  test_group.py
tests/static/: initial_data.sql
